Enable Column Level lineage for all the entities